April 15 2007: Version 1.0 RC2 Release
=============================
Turned out that there were some old media files in the release so I've decided to quickly put out a snapshot
release .
* removed old media from media/materials/programs - caused ATI graphics cards to crash
* fixed wrappers for Node.getChild/removeChild etc as I'd incorrectly wrapped them :(
* added build date and time to module doc  ie. print ogre._ogre_.__doc__ 

April 14 2007: Version 1.0 RC1 Release
==============================
* Reverse order of entries in ChangeLog :)
* exception handling matches the changes in Ogre 1.4 (and works)
* _ConfigOption name changed to ConfigOption
* << Operators in base source now exposed as __str__ -- makes "print xxx" work well
* Couple of FactoryObj aliases added to clean up names
* Radian/Degree constructor fix added to __init__.py file
* Auto Quaternion conversion (to and from Tuple/list)
* Auto Matrix3 conversion to and from Tuple/list
* Extended setter properties - functions that take colour/vectors can now be properties taking tuples/lists
   ie. light.colour=0,0,1 || [0,0,1] || (0,0,1) || Ogre.ColourValue(0,0,1)  now work
* Fixed Quaternion multiplication by a float
* Remove auto converstions in _ogre_main so hopefully don't get strange obj to obj conversions
* Added Hinge etc callbacks to OgreNewt (missing) via hand wrappers
* Removed Math::Abs overloads so only the (::Ogre::Real) on is left, otherwise it always picked the Radian one
* Excluded StringConverter class - not really needed in Python and has reg order issues in 'tostring'
   
20 Feb 2007:  Version 0.9 Release
=================================
* Python style iterator access to all Map and Vector iterators 
  (you can still access the iterators using the C++ methods)
  So now a "for r in fm.getResourceIterator():" is valid
* getByName and getByHandle methods of ResourceManager (and it's subclasses)
  now automatically returns the correct Object type - previously it returned